# Hand-detection-and-segmentation

./: New Text Document.txt  README.md
HOG features FINAL solution/: CMakeLists.txt  Project.cpp
HOG features FINAL solution/SVM model/: SVMmodelH - 1.xml  SVMmodelH - 2.xml  SVMmodelV - 1.xml  SVMmodelV - 2.xml
HOG features FINAL solution/includes/: header.h
HOG features FINAL solution/libs/: DataUtilities.cpp  HogDetector.cpp  utils.cpp
Haar-Cascade/: CMakeLists.txt  Project.cpp  README.md
Haar-Cascade/dataset/EgoHands Public.v1-specific.voc/: README.roboflow.txt
Haar-Cascade/dataset/EgoHands Public.v1-specific.voc/test/: CARDS_COURTYARD_B_T_frame_0295_jpg.rf.479a6987460ca993ce070ce5277c6ed9.xml  CARDS_COURTYARD_B_T_frame_0580_jpg.rf.6f2920f55005d993936be103752c0cf5.xml  CARDS_COURTYARD_B_T_frame_0649_jpg.rf.b4922f808f04d2842539e89cbcab6ec4.xml  CARDS_COURTYARD_B_T_frame_0815_jpg.rf.7dabad93af4edf0cfb982c0b6f640965.xml  CARDS_COURTYARD_B_T_frame_1009_jpg.rf.6993f826a59547a90b2cded27e619dd8.xml  CARDS_COURTYARD_B_T_frame_1024_jpg.rf.9e96aa293d2f73e690259e37130a8c1f.xml  CARDS_COURTYARD_B_T_frame_1470_jpg.rf.ab910a363eddd75658f838f0251aa629.xml  CARDS_COURTYARD_B_T_frame_1804_jpg.rf.7918012efa29a48b5d91c85e49eb51f3.xml  CARDS_COURTYARD_B_T_frame_1849_jpg.rf.94d10648117df838529f8442141f2f34.xml  (+471 more)
Haar-Cascade/dataset/train/: trainingSamples.vec
Haar-Cascade/dataset/train - 2 trial/: README.txt  positiveSamplesH.vec
Haar-Cascade/includes/: header.h
Haar-Cascade/libs/: cascadeDetection.cpp  prepareTraining.cpp  tinyxml2.cpp  utilities.cpp
(+13379 files in other folders)
